tests/baselines/reference/parserStrictMode3.errors.txt
==== tests/cases/compiler/parserStrictMode3.ts (2 errors) ====
    "use strict";
    eval = 1;
         ~
!!! parserStrictMode3.ts(2,6): error TS1100: Invalid use of 'eval' in strict mode.
    ~~~~
!!! parserStrictMode3.ts(2,1): error TS2130: Invalid left-hand side of assignment expression.